--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
+psycopg2==2.9.3
 pycparser==2.21
 PyMySQL==1.0.2
 SQLAlchemy==1.4.39
