--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
+postgres==4.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
+psycopg2-pool==1.1
 pycparser==2.21
 PyMySQL==1.0.2
 SQLAlchemy==1.4.39
